--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "lodash.merge": "^4.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
